--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,7 +11,9 @@ dependencies:
   flutter:
     sdk: flutter
     
-  extended_text_library: ^0.4.7
+  extended_text_library:
+    git:
+      url: git://github.com/peerwaya/extended_text_library.git
 
 dev_dependencies:
   flutter_test:
